Fix link font & add gap and change color font

--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
 }
 
 /* p {
+  font-family: "Karla", serif;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
@@ -47,7 +48,7 @@ ul {
 
 li a {
   padding: 0 45px;
-  font-size: 16px;
+  font-size: 26px;
   color: #ff8c32;
 }
 
@@ -102,7 +103,7 @@ a:focus {
 }
 
 .profile-name {
-  font-style: normal;
+  font-family: "Rubik", serif;
   font-weight: 900;
   font-size: 53px;
   line-height: 63px;
@@ -111,7 +112,7 @@ a:focus {
   -webkit-text-fill-color: transparent;
   background-clip: text;
   text-shadow: -2px 2px 15px rgba(219, 54, 164, 0.5);
-  padding-bottom: 20px;
+  padding-bottom: 10px;
 }
 
 /* animation text hero  */
@@ -120,6 +121,7 @@ a:focus {
   display: flex;
 }
 .hero .static-txt {
+  font-family: "Karla", serif;
   color: #fff;
   font-size: 60px;
   font-weight: 400;
@@ -131,6 +133,7 @@ a:focus {
   overflow: hidden;
 }
 .dynamic-txts li {
+  font-family: "Karla", serif;
   list-style: none;
   color: #ff8c32;
   font-size: 60px;
@@ -169,7 +172,7 @@ a:focus {
   }
 }
 /* .profile-job {
-  font-family: "Karla";
+  font-family: "Karla", serif;;
   font-style: normal;
   font-weight: 500;
   font-size: 43px;
@@ -179,10 +182,12 @@ a:focus {
 } */
 
 .profile-description {
-  max-width: 550px;
+  width: 100%;
+  max-width: 600px;
   font-size: 14px;
   line-height: 16px;
-  padding-top: 20px;
+  padding: 10px 0 20px 0;
+  color: #a5a2a2;
 }
 
 .profile-picture {
@@ -236,7 +241,8 @@ a:focus {
   max-width: 1200px;
   margin: 0 auto;
   justify-content: space-between;
-  padding: 0 0 30px 0;
+  padding-left: 20px;
+  padding-bottom: 40px;
 }
 
 .about-vertical {
@@ -266,16 +272,17 @@ a:focus {
 
 .about-profile {
   margin: 0 50px;
+  width: 100%;
+  max-width: 700px;
 }
 
-.about-profile,
-p {
-  font-family: "Karla";
+.about-profile p {
+  font-family: "Karla", serif;
   font-style: normal;
   font-weight: 400;
   font-size: 22px;
   line-height: 26px;
-  padding-bottom: 35px;
+  padding: 0 0 35px 0;
   color: #ffffff;
 }
 
@@ -288,12 +295,12 @@ p {
   width: 100%;
   max-width: 1200px;
   margin: 0 auto;
-
+  gap: 20px;
   padding: 0 0 30px 0;
 }
 
 .skills-section h2 {
-  font-family: "Karla";
+  font-family: "Karla", serif;
   color: #ff8c32;
   font-style: normal;
   font-weight: 700;
@@ -302,20 +309,21 @@ p {
 }
 
 .skills-section p {
-  font-family: "Karla";
-  padding-top: 20px;
+  font-family: "Karla", serif;
+
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
   line-height: 16px;
-  color: #eeeeee;
+  color: #a5a2a2;
 }
 
 .container-logo {
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: repeat(8, 1fr);
+  gap: 5px;
+  padding: 20px;
   background: rgba(247, 235, 235, 0.2);
-  padding-top: 10px;
   box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
   backdrop-filter: blur(11px);
   -webkit-backdrop-filter: blur(11px);
@@ -326,7 +334,6 @@ p {
 .flex-column {
   display: flex;
   flex-direction: column;
-  padding: 20px 30px 0px 20px;
   align-items: center;
   justify-content: center;
 }
@@ -341,13 +348,14 @@ p {
   padding: 50px 0 0 0;
 }
 
-h2.service-white {
+.service-section h2 {
+  font-family: "Karla", serif;
   font-size: 48px;
   color: #fff;
   font-weight: bold;
 }
-
-.service-orange {
+.service-section h2:nth-last-child(2) {
+  font-family: "Karla", serif;
   font-size: 48px;
   color: #ff8c32;
   font-weight: bold;
@@ -355,13 +363,20 @@ h2.service-white {
 
 .service-list {
   display: flex;
-  padding: 0 25px;
-  justify-content: space-between;
+  gap: 20px;
+  justify-content: space-around;
+  color: white;
 }
 
 .service-card {
   display: flex;
+  font-family: "Karla", serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 26px;
   flex-direction: column;
+  gap: 25px;
   background: rgba(247, 235, 235, 0.2);
   margin-top: 35px;
   padding: 15px 25px 0px 25px;
@@ -427,6 +442,16 @@ footer a:hover {
   height: 88px;
   margin-bottom: 28px;
 } */
+
+footer p {
+  font-family: "Karla", serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 26px;
+  color: #a5a2a2;
+  margin-bottom: 50px;
+}
 
 footer a {
   position: relative;
